node/tests/k8st/infra/bgpconfig.yaml
apiVersion: projectcalico.org/v3
kind: BGPConfiguration
metadata:
 name: default
spec:
 programClusterRoutes: Disabled
 nodeToNodeMeshEnabled: false
