node/tests/k8st/infra/calico_versions.yml
# Components defined here are required to be kept in sync with config/calico_versions.yml in the tigera/operator repository.
# Ideally we can remove this file and the need to re-build the operator altogether if we change how images are loaded into the test cluster.
title: latest
components:
  libcalico-go:
    version: master
  typha:
    version: test-build
  node:
    version: test-build
  cni:
    version: test-build
  node-windows:
    version: test-build
  cni-windows:
    version: test-build
  kube-controllers:
    version: test-build
  goldmane:
    version: test-build
  flexvol:
    version: test-build
  apiserver:
    version: test-build
  csi:
    version: test-build
  csi-node-driver-registrar:
    version: test-build
  key-cert-provisioner:
    version: test-build
  whisker:
    version: test-build
  whisker-backend:
    version: test-build
  envoy-gateway:
    version: test-build
  envoy-proxy:
    version: test-build
  envoy-ratelimit:
    version: test-build
  guardian:
    version: test-build
  webhooks:
    version: test-build
