node/tests/k8st/infra/values.yaml
# Default values.yaml for Calico installation on kind clusters.
installation:
  enabled: true
  registry: docker.io

  # Disable HA control plane.
  controlPlaneReplicas: 1

  # Diable CSI / flexVolume as they are not used by these tests.
  kubeletVolumePluginPath: "None"
  flexVolumePath: "None"

  # Configure CIDRs to match kubeadm cluster.
  calicoNetwork:
    # Enable policy setup timeout to increase test reliability.
    linuxPolicySetupTimeoutSeconds: 5
    ipPools:
    - cidr: 192.168.0.0/16
    - cidr: fd00:10:244::/64

# Pin the apiserver / webhooks to the control-plane node so connectivity with the
# k8s apiserver is not impacted by tests that disable / re-enable networking.
# Only one of these deployments is created depending on the CRD mode (v1 vs v3),
# but we include both overrides so that the correct one is always applied.
apiServer:
  enabled: true
  apiServerDeployment:
    spec:
      template:
        spec:
          nodeSelector:
            kubernetes.io/hostname: kind-control-plane
  calicoWebhooksDeployment:
    spec:
      template:
        spec:
          nodeSelector:
            kubernetes.io/hostname: kind-control-plane

goldmane:
  enabled: true

whisker:
  enabled: true

# CRDs are installed by `make kind-cluster-create` in lib.Makefile ($(KUBECTL) create -f $(REPO_ROOT)/libcalico-go/config/crd;)
manageCRDs: false

# Configuration for the tigera operator
tigeraOperator:
  image: tigera/operator
  version: test-build
  registry: docker.io
